--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "AlecrimCoreData"]
 	path = AlecrimCoreData
-	url = https://github.com/Alecrim/AlecrimCoreData.git
+	url = git://github.com/Alecrim/AlecrimCoreData/
